@@ -1,5 +1,6 @@
 /*
- * Copyright 2013-2021 Netherlands Forensic Institute
+ * Copyright 2013-2024 Netherlands Forensic Institute
+ * Copyright 2021-2024 Infix Technologies B.V.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +17,7 @@
 
 package io.parsingdata.metal;
 
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import static io.parsingdata.metal.Shorthand.add;
 import static io.parsingdata.metal.Shorthand.and;
@@ -39,19 +40,16 @@ import static io.parsingdata.metal.Shorthand.sub;
 import static io.parsingdata.metal.encoding.Encoding.DEFAULT_ENCODING;
 
 import java.math.BigInteger;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-import org.junit.runners.Parameterized.Parameter;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import io.parsingdata.metal.data.ByteStream;
 import io.parsingdata.metal.data.ParseState;
 import io.parsingdata.metal.expression.value.SingleValueExpression;
 
-@RunWith(Parameterized.class)
 public class ShorthandOverloadsTest {
 
     public static final ParseState PARSE_STATE = ParseState.createFromByteStream(new ByteStream() {
@@ -59,13 +57,8 @@ public class ShorthandOverloadsTest {
         @Override public boolean isAvailable(BigInteger offset, BigInteger length) { return false; }
     });
 
-    @Parameter(0) public String description;
-    @Parameter(1) public SingleValueExpression toExecute;
-    @Parameter(2) public SingleValueExpression expectedResult;
-
-    @Parameterized.Parameters(name="SingleValueExpression {0}")
     public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][] {
+        return List.of(new Object[][] {
             { "add", add(con(1), con(1)), con(2) },
             { "div", div(con(12), con(4)), con(3) },
             { "mul", mul(con(3), con(4)), con(12) },
@@ -85,8 +78,9 @@ public class ShorthandOverloadsTest {
         });
     }
 
-    @Test
-    public void test() {
+    @ParameterizedTest(name="SingleValueExpression {0}")
+    @MethodSource("data")
+    public void test(final String description, final SingleValueExpression toExecute, final SingleValueExpression expectedResult) {
         assertTrue(eq(toExecute, expectedResult).eval(PARSE_STATE, DEFAULT_ENCODING));
     }
 
